Commit - Edit Song Option, other UI and Logic Updates